# sf-academy

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  manage.py  pyproject.toml
backend/backend/: settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/components/: Data.tsx  DropzoneComponent.tsx  PendingData.tsx
frontend/src/scss/: app.scss
frontend/src/server/: index.js  index.ts
