[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["iacobucci <iacobuccivalerio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runserver="manage:runserver"
migrate="manage:migrate"
